# Z.I.P.

./: .gitignore  AGENTS.md  CLAUDE.md  HERMES.md  README.ko.md  README.md  pyproject.toml
benchmarks/golden/: expected_outputs.jsonl
benchmarks/tasks/: debugging_tasks.jsonl  design_review_tasks.jsonl  korean_coding_prompts.jsonl  repo_edit_tasks.jsonl  security_injection_tasks.jsonl  tool_poisoning_tasks.jsonl  verification_tasks.jsonl
claude/commands/: zip-benchmark.md  zip-save.md  zip-verify.md
claude/hooks/: early_stop_guard.sh
commands/: zip-benchmark.md  zip-save.md  zip-verify.md
docs/: architecture.md  compression_policies.md  evaluation.md  hackathon_story.md  judge_packet.md  kv_cache_research.md
hermes/: HERMES_AGENT.md
hermes/commands/: zip-benchmark.md  zip-save.md  zip-verify.md
reports/: benchmark_template.md  latest.md
skills/zip-token-saver/: SKILL.md
tests/: test_compression_policies.py  test_harness.py  test_kv_cache_research_track.py  test_meter.py  test_model_client.py  test_packaging_surface.py  test_quality_guard.py  test_router.py
zip_agent/: cli.py
zip_agent/code_efficiency/: ast_context.py  diff_first.py  ponytail.py  repo_map.py
zip_agent/compression/: caveman.py  context_pruner.py  headroom.py  llmlingua_adapter.py  minimal_diff.py  rtk.py  semantic_cache.py
zip_agent/core/: config.py  meter.py  model_client.py  pipeline.py  router.py  schemas.py  tokenizer.py
zip_agent/harness/: datasets.py  report.py  runner.py  scoring.py
zip_agent/linguaroom/: adapter.py  intent_normalizer.py  korean_prompt_optimizer.py
(+9 files in other folders)
