[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zip-agent"
version = "0.1.0"
description = "Measurement-first adaptive prompt-saving framework for coding agents."
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[project.scripts]
zip-agent = "zip_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.9"
extraPaths = ["."]
